# itd_hmi_vehicle_management_msg_transformer

./: .gitignore  CMakeLists.txt  readme.txt
itd_hmi_vm_msg_transformer/: BUILD.mk
itd_hmi_vm_msg_transformer/api/: msg.proto
itd_hmi_vm_msg_transformer/config/: config.yaml
itd_hmi_vm_msg_transformer/include/: app.h  decode.h  msg.pb.h
itd_hmi_vm_msg_transformer/src/: app.cpp  decode.cpp  main.cpp  msg.pb.cc
module/common/include/: error_code.h
module/communication/tcp/include/: tcp_client.h
module/communication/tcp/src/: tcp_client.cpp
module/communication/udp/include/: udp_receiver.h  udp_sender.h
module/communication/udp/src/: udp_receiver.cpp  udp_sender.cpp
module/util/include/: util.h
module/util/src/: util.cpp
